--- a/index.html
+++ b/index.html
@@ -52,7 +52,43 @@
     </nav>
     <section class="container-fluid">
         <div class="row bg-dark text-white">
-            <div class="col-7"></div>
+            <div class="col-lg-7 p-0">
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="img/california.jpg" class="d-block w-100" alt="California">
+                            <div class="carousel-caption">
+                                <h3 class="display-4">California</h3>                                
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/paris.jpg" class="d-block w-100" alt="Paris">
+                            <div class="carousel-caption">
+                                <h3 class="display-4">Paris</h3 class="display-4">                                
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/dublin.jpg" class="d-block w-100" alt="Dublin">
+                            <div class="carousel-caption">
+                                <h3 class="display-4">Dublin</h3>                                
+                            </div>
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                    </div>
+            </div>
             <div class="col-lg-5 p-4">
                 <h1 class="display-4">Realize a viagem do seu sonho</h1>
                 <p class="lead">O melhor local para sua viagem</p>
@@ -69,6 +105,66 @@
                 </form>
             </div>
         </div>
+    </section>
+    <section class="py-5 bg-light text-center ">
+        <div class="container">
+            <div class="my-5">
+                <span class="h6 d-block">TUDO DE MELHOR PRA VOCÊ</span>
+                <h2 class="display-4 text-primary">Aproveita as Vantagens</h2>
+            </div>
+           
+
+            <div class="row">
+                <div class="col-xl-4 col-md-6">
+                    <div class="icone d-flex justify-content-center">
+                        <img src="img/icones/passaporte.svg" alt="">
+                    </div>
+                    <h3>Documentos </h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat est autem explicabo soluta voluptatem molestiae, illum minima libero quis incidunt ducimus earum rem in quisquam natus rerum eveniet nisi ea!</p>
+                </div>
+
+                <div class="col-xl-4 col-md-6">
+                    <div class="icone d-flex justify-content-center">
+                        <img src="img/icones/passagens.svg" alt="">
+                    </div>
+                    <h3>Passagens</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat est autem explicabo soluta voluptatem molestiae, illum minima libero quis incidunt ducimus earum rem in quisquam natus rerum eveniet nisi ea!</p>
+                </div>
+
+                <div class="col-xl-4 col-md-6">
+                    <div class="icone d-flex justify-content-center">
+                        <img src="img/icones/translado.svg" alt="">
+                    </div>
+                    <h3>Translados</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat est autem explicabo soluta voluptatem molestiae, illum minima libero quis incidunt ducimus earum rem in quisquam natus rerum eveniet nisi ea!</p>
+                </div>
+
+    
+
+                <div class="col-xl-4 col-md-6">
+                    <img src="img/icones/praias.svg" alt="">
+                    <h3>Praias</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat est autem explicabo soluta voluptatem molestiae, illum minima libero quis incidunt ducimus earum rem in quisquam natus rerum eveniet nisi ea!</p>
+                </div>
+                <div class="col-xl-4 col-md-6">
+                    <img src="img/icones/bagagens.svg" alt="">
+                    <h3>Bagagens</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat est autem explicabo soluta voluptatem molestiae, illum minima libero quis incidunt ducimus earum rem in quisquam natus rerum eveniet nisi ea!</p>
+                </div>
+                <div class="col-xl-4 col-md-6">
+                    <img src="img/icones/turismo.svg" alt="">
+                    <h3>Turismo</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat est autem explicabo soluta voluptatem molestiae, illum minima libero quis incidunt ducimus earum rem in quisquam natus rerum eveniet nisi ea!</p>
+                </div>
+            </div>
+            <a href="planos.html" class="btn btn-primary btn-lg mt-4">Comprar Plano</a>
+        </div>        
+    </section>
+    <section id="homeQuote" class="p-md-5">
+        <blockquote class="blockquote text-center text-white p-md-5 p-3">
+            <p class="display-4"><em>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus unde sequi, magnam sapiente iusto temporibus corporis soluta modi voluptas itaque aliquid harum perferendis quidem animi minima placeat voluptatum impedit inventore!</em></p>
+            <footer class="blockquote-footer text-white">Lorem ipsum </footer>
+        </blockquote>
     </section>
 </body>
 </html>
