--- a/index.html
+++ b/index.html
@@ -89,15 +89,12 @@
                     </a>
                     </div>
             </div>
-            <div class="col-lg-5 p-4">
+            <div class="col-lg-5 p-4 align-self-center">
                 <h1 class="display-4">Realize a viagem do seu sonho</h1>
-                <p class="lead">O melhor local para sua viagem</p>
+                <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis nulla maiores, harum error dolorum enim.</p>
                 <form action="">
                     <div class="input-group input-group-lg">
                         <input type="text" class="form-control" placeholder="E-mail" aria-label="E-mail" aria-describedby="button-addon2">
-                
-
-
                         <div class="input-group-append">
                             <button class="btn btn-primary" type="button">Inscreva-se</button>
                           </div>
@@ -137,9 +134,7 @@
                     </div>
                     <h3>Translados</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat est autem explicabo soluta voluptatem molestiae, illum minima libero quis incidunt ducimus earum rem in quisquam natus rerum eveniet nisi ea!</p>
-                </div>
-
-    
+                </div>    
 
                 <div class="col-xl-4 col-md-6">
                     <img src="img/icones/praias.svg" alt="">
@@ -166,5 +161,81 @@
             <footer class="blockquote-footer text-white">Lorem ipsum </footer>
         </blockquote>
     </section>
+    <section class="container">
+        <div class="my-5 text-center">
+            <span class="h6 d-block">AINDA ESTÁ COM DÚVIDAS</span>
+            <h2 class="display-4 text-primary">PERGUNTAS FREQUENTES</h2>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-md-6" id="perguntasFrequentes" data-children=".pergunta">
+                <div class="pergunta py-2">
+                    <a class="lead" data-toggle="collapse" data-parent="#perguntasFrequentes" href="#pergunta1">É possível Cancelar a viagem</a>
+                    <div id="pergunta1"class="collapse show" role="tabpanel">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum quidem provident cum impedit eius blanditiis veritatis aut magnam fugiat sapiente doloribus possimus, similique nulla distinctio quo a enim vero minima!</p>
+                    </div>
+                </div>
+                <div class="pergunta py-2">
+                    <a class="lead" data-toggle="collapse" data-parent="#perguntasFrequentes" href="#pergunta2">É possível Cancelar a viagem</a>
+                    <div id="pergunta2"class="collapse" role="tabpanel">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum quidem provident cum impedit eius blanditiis veritatis aut magnam fugiat sapiente doloribus possimus, similique nulla distinctio quo a enim vero minima!</p>
+                    </div>
+                </div>
+                <div class="pergunta py-2">
+                    <a class="lead" data-toggle="collapse" data-parent="#perguntasFrequentes" href="#pergunta3">É possível Cancelar a viagem</a>
+                    <div id="pergunta"class="collapse" role="tabpanel">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum quidem provident cum impedit eius blanditiis veritatis aut magnam fugiat sapiente doloribus possimus, similique nulla distinctio quo a enim vero minima!</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="text-center my-4">
+            <p class="small m-1">FALE CONOSCO PARA MAIS DÚVIDAS</p>
+            <a class="btn btn-primary btn-lg" href="#">Entre em Contato</a>
+        </div>
+    </section>
+    <footer class="bg-dark text-white">
+        <div class="container py-4">
+            <div class="row">
+                <div class="col-md-3 col-6">
+                    <h4 class="h6">Páginas</h4>
+                    <ul class="list-unstyled">
+                        <li><a href="#">Lorem</a></li>
+                        <li><a href="#">Lorem</a></li>
+                        <li><a href="#">Lorem</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3 col-6">
+                    <h4 class="h6">Locais</h4>
+                    <ul class="list-unstyled">
+                        <li><a href="#">Lorem</a></li>
+                        <li><a href="#">Lorem</a></li>
+                        <li><a href="#">Lorem</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <h4 class="h6">Dados de contato</h4>
+                    <ul class="list-unstyled text-secondary">
+                        <li>teste@teste.com.br</li>
+                        <li>11 7878-4512</li>
+                        <li>De Seg a Sex 8:00 às 17:00</li>
+                    </ul>
+                </div>
+                <div class="col-md-2">
+                    <h4 class="h6">Redes Sociais</h4>
+                    <ul class="list-unstyled">
+                        <li><a href="#" class="mb-2 btn btn-sm btn-outline-secondary btn-block" style="max-width: 140px;">Facebook</a></li>
+                        <li><a href="#" class="mb-2 btn btn-sm btn-outline-secondary btn-block" style="max-width: 140px;">Twitter</a></li>
+                        <li><a href="#" class="mb-2 btn btn-sm btn-outline-secondary btn-block" style="max-width: 140px;" >Instagram</a></li>
+                    </ul>
+                </div>              
+            </div>
+        </div>
+        <div class="bg-primary text-center py-3">
+            <p class="mb-0">
+                Festa Fácil Balieiro 2019. Todos os direitos reservados.
+            </p>
+        </div>
+        </footer>
+    </footer>
 </body>
 </html>
