--- a/index.html
+++ b/index.html
@@ -16,6 +16,35 @@
 
 </head>
 <body>
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Entre com sua conta</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <label for="exampleInputEmail1">Email address</label>
+                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleInputPassword1">Password</label>
+                            <input type="password" class="form-control" id="exampleInputPassword1">
+                        </div>  
+                        
+                        <button type="submit" class="btn btn-primary">Entrar na conta</button>
+                        <small class="form-text text-muted">Esqueceu a senha? Clique <a href="#">Aqui</a></small>
+                    </form>
+                </div>            
+            </div>
+        </div>
+    </div>
     <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top py-3 box-shadow">
         <a href="index.html">
             <img src="img/caravan.svg" alt="caravan">
@@ -42,8 +71,14 @@
                     <a class="nav-link" href="contato.html">Contato</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="">Login</a>
+                    <a class="nav-link" href="" data-toggle="modal" data-target="#exampleModal">Login</a>
                 </li>
+
+
+              
+
+
+
                 <li class="nav-item">
                     <a class="btn btn-outline-primary ml-md-2" href="">Inscreva-se</a>
                 </li>              
